//////////////////////////////////////////////////////////////////////////////////////////////
// DO NOT MODIFY THIS FILE                                                                  //
// This file is automatically generated by ZenStack CLI and should not be manually updated. //
//////////////////////////////////////////////////////////////////////////////////////////////

datasource db {
  provider = "sqlite"
  url      = "file./dev.db"
}

generator client {
  provider = "prisma-client-js"
}

model Image {
  id      Int       @id() @default(autoincrement())
  /// @trim
  path    String
  project Project[]
}

model Genre {
  id      Int       @id() @default(autoincrement())
  /// @trim
  label   String
  project Project[]
}

model Project {
  id          Int    @id() @default(autoincrement())
  /// @trim
  title       String
  /// @trim
  description String
  coverId     Int
  genreId     Int
  cover       Image  @relation(fields: [coverId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  genre       Genre  @relation(fields: [genreId], references: [id], onDelete: Cascade, onUpdate: Cascade)
}
